fixed uneven spacing in settings form

--- a/server/public/css/profile.css
+++ b/server/public/css/profile.css
@@ -4,3 +4,7 @@
 
 .account-form select {
   margin-right: 5px; }
+
+.control-label {
+  width: 100px;
+  flex-grow: 0; }
